@startuml

title __TASK2's Class Diagram__\n

  namespace  {
    namespace om.example.task2 {
      class com.example.task2.HelloApplication {
      }
    }
  }
  

  namespace  {
    namespace om.example.task2 {
      class com.example.task2.HelloController {
      }
    }
  }
  

  namespace  {
    namespace om.example.task2 {
      namespace forms {
        class com.example.task2.forms.MyLine {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.task2 {
      namespace forms {
        class com.example.task2.forms.MyLines {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.task2 {
      namespace forms {
        class com.example.task2.forms.MyPentagon {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.task2 {
      namespace forms {
        class com.example.task2.forms.MyRectangle {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.task2 {
      namespace forms {
        abstract class com.example.task2.forms.MyShape {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.task2 {
      namespace forms {
        class com.example.task2.forms.MySquare {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.task2 {
      namespace forms {
        class com.example.task2.forms.MyTriangle {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.task2 {
      namespace forms {
        class com.example.task2.forms.ShapeFactory {
        }
      }
    }
  }
  

  com.example.task2.HelloApplication -up-|> javafx.application.Application
  com.example.task2.forms.MyLine -up-|> com.example.task2.forms.MyShape
  com.example.task2.forms.MyLines -up-|> com.example.task2.forms.MyShape
  com.example.task2.forms.MyPentagon -up-|> com.example.task2.forms.MyShape
  com.example.task2.forms.MyRectangle -up-|> com.example.task2.forms.MyShape
  com.example.task2.forms.MySquare -up-|> com.example.task2.forms.MyShape
  com.example.task2.forms.MyTriangle -up-|> com.example.task2.forms.MyShape


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
